# banish

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
nbs/: data.ipynb  train.ipynb
nbs/train/: numeric.ipynb
summon/: banish.py  dispel.py  model.py  models.py  torch.py
