[tool.poetry]
name = "summon"
version = "0.1.0"
description = ""
authors = ["Josh Wiley <josh@mindbend.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
numpy = "^1.23.4"
pyarrow = "^9.0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.4.6"
black = "^22.8.0"
mypy = "^0.971"
pylint = "^2.15.2"
pytest = "^7.1.3"
matplotlib = "^3.5.3"
datasets = "^2.6.1"
ipywidgets = "^8.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
